<resources>
    <string name="app_name">AdroBuzz</string>

    <string name="join_conference">Join Conference</string>
    <string name="create_conference">Create Conference</string>

    <string name="press_conference_subject">Press Conference Subject</string>
    <string name="date_time">Date-Time</string>
    <string name="venue">Venue</string>
    <string name="invitee_username">Invitee\'s Username</string>
    <string name="invitee_email">Invitee\'s Email ID</string>

    <string name="conference_id">Conference ID</string>
    <string name="joinee_username">Joinee\'s Username</string>
    <string name="joinee_email">Joinee\'s Email ID</string>

    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>

    <string name="press_conference_subject_empty">Please enter press conference subject</string>
    <string name="venue_empty">Please enter venue</string>
    <string name="invitee_username_empty">Please enter invitee username</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="conference_id_empty">Please enter conference ID</string>
    <string name="joinee_username_empty">Please enter joinee username</string>
    <string name="email_already_added">Email Already exists</string>
    <string name="add_error_please_add_atleast_one_invite">Please add atleast one invite</string>

    <string name="add">Add Email ID</string>
    <string name="welcome_user">Welcome User</string>
    <string name="start_conference">Start Conference</string>
    <string name="add_invites">Add Invites</string>
    <string name="send_invites">Send Invites</string>

    <string name="join_error_conference_not_started">Conference has not been started yet. Please join once it has been started by admin.</string>
    <string name="join_error_conference_completed">Conference has been completed. You cannot join conference once it has been completed</string>

    <string name="recording_started">Recording has been started</string>
    <string name="recording_stopped">Recording has been stopped</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="email_sent">Email Sent</string>

    <string name="msg_conference_ended_by_admin">Conference has been ended by admin</string>
    <string name="msg_end_conference_before_logging_off">Please end conference before logging off</string>
    <string name="msg_conference_not_ended_sure_you_want_to_logout">Conference has not been ended yet. Are you sure you want to leave conference?</string>
    <string name="msg_are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
    <string name="msg_do_you_want_to_send_email_before_logging_out">Do you want to send email before logging out</string>
    <string name="msg_you_have_not_sent_mail_do_you_want_to_or_logout">You have not sent the email of conference summary. Do you want to send email or logout?</string>

</resources>
