<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="createConf"
            type="Boolean" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.adrosonic.adrobuzz.components.CreateConference.CreateConference">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_launcher_background" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutConfSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/conf_subject"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/press_conference_subject"
                            android:imeOptions="actionNext"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true"
                            android:theme="@style/EditTextTheme"
                            app:validateEmpty="@{true}"
                            app:validateEmptyAutoDismiss="@{true}"
                            app:validateEmptyMessage="@{@string/press_conference_subject_empty}" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutVenue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inputLayoutConfSubject"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/venue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/venue"
                            android:imeOptions="actionNext"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true"
                            android:theme="@style/EditTextTheme"
                            app:validateEmpty="@{true}"
                            app:validateEmptyAutoDismiss="@{true}"
                            app:validateEmptyMessage="@{@string/venue_empty}" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutInviteeUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inputLayoutVenue"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/invitee_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/invitee_username"
                            android:imeOptions="actionNext"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true"
                            android:theme="@style/EditTextTheme"
                            app:validateEmpty="@{true}"
                            app:validateEmptyAutoDismiss="@{true}"
                            app:validateEmptyMessage="@{@string/invitee_username_empty}" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutInviteeEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inputLayoutInviteeUsername"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/invitee_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/invitee_email"
                            android:imeOptions="actionDone"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true"
                            android:theme="@style/EditTextTheme"
                            app:validateType='@{"email"}'
                            app:validateTypeAutoDismiss="@{true}"
                            app:validateTypeMessage="@{@string/invalid_email}" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/date_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inputLayoutInviteeEmail"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:padding="6dp"
                            android:text="@string/date"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:padding="6dp"
                            android:text="@string/time"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/create_conference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/date_time"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/button_background"
                        android:text="@string/create_conference"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </RelativeLayout>

            </ScrollView>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/progressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000"
            android:visibility="@{createConf ? View.VISIBLE : View.GONE}">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

    </RelativeLayout>

</layout>